# ULP-V2V-Auth

./:    .gitignore  ADVISOR_MEETING_SUMMARY.md  README.md  package-lock.json  package.json
benchmark/: bench_batch_verify.js  bench_comparison.js  bench_credential_proof.js  bench_dcv.js  bench_ecdsa_baseline.js  bench_jiang_lattice.js  bench_poseidon.js  bench_primitives.js  bench_proof_cache.js  bench_prover.js  bench_raba.js  bench_raba_ablation.js  bench_rapidsnark.js  bench_scms_batch.js  bench_single_verify.js  bench_wu_clss.js  plot_results.py  run_jcsse_benchmarks.sh  run_native_bench.sh
benchmark 2/: bench_batch_verify.js  bench_jiang_lattice.js  bench_pairing_breakdown.js  bench_wu_clss.js  groth16_batch_verify.js  run_jcsse_benchmarks.sh
benchmark/batch_verify_native/: Cargo.toml
benchmark/batch_verify_native/src/: main.rs
circuits/: ulp_v2v_auth.circom
demo/: server.js
demo/public/: index.html
latex 2/: main.tex  refs.bib
latex 2/Assets_TEX/: phase1.tex  phase2.tex  phase3.tex  phase4.tex  tikz-test.tex  tree.tex
latex 2/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_design_challenges.tex  (+4 more)
obu/: acquire_ast.js  bench_e2e.js  register.js
results/: bench_batch_verify.json  bench_pairing_breakdown.json  bench_poseidon.json  bench_prover.json
scripts/: bench_depth_scaling.sh  gen_input.js  install_rapidsnark.sh  prove_and_verify.js  setup.sh
server/: ais_server.js  ta_server.js
ulp_results_depth16/: bench_batch_verify.json  bench_poseidon.json  bench_proof_cache.json  bench_prover.json  bench_rapidsnark.json
