[package]
name    = "batch_verify_native"
version = "0.1.0"
edition = "2021"

# Native Groth16 batch-verifier for BN254.
# Measures sequential (3k pairings) vs batch (k+3 pairings) without
# JavaScript/BigInt per-call overhead, giving the true algebraic speedup.

[dependencies]
ark-bn254      = "0.4"
ark-ec         = "0.4"
ark-ff         = "0.4"
ark-std        = { version = "0.4", features = ["std"] }
rand           = "0.8"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
